[package]
name = "wasm-utils"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
rain-metadata = "0.0.2-alpha.6"
serde_bytes = "0.11.12"